--- a/docs/website.css
+++ b/docs/website.css
@@ -29,8 +29,8 @@ div {
 
 .game {
 	background-color: rgb(10, 10, 10);
-	width: 150px;
-	height: 217px;
+	width: 4cm;
+	height: 5.5cm;
 	border-radius: 11px;
 	padding: 11px;
 	margin: 2px;
