--- a/docs/website.css
+++ b/docs/website.css
@@ -45,6 +45,16 @@ div {
 	transition: background-color 100ms ease-out, border 100ms ease-out;
 }
 
+.game-new-tag {
+	margin: -145% -5px;
+	border-radius: 40px;
+	background: #d42a2a;
+	text-align: center;
+	width: 60px;
+	font-size: 16px;
+	position: relative
+}
+
 .game-thumbnail {
 	border-radius: 8px;
 	width: 100%;
