--- a/docs/website.css
+++ b/docs/website.css
@@ -46,11 +46,12 @@ div {
 }
 
 .game-new-tag {
-	margin: -145% -5px;
+	margin: -6px -5px -10px;
 	border-radius: 40px;
 	background: #d42a2a;
 	text-align: center;
 	width: 60px;
+	height: 18px;
 	font-size: 16px;
 	position: relative
 }
@@ -105,6 +106,7 @@ button {
 }
 
 .game-category {
+	width: 93%;
 	row-gap: 10px;
 	column-gap: 10px;
 	height: 241px;
