--- a/docs/website.css
+++ b/docs/website.css
@@ -46,14 +46,14 @@ div#recommend.game {
 	border-radius:10px;
 	background:
 		linear-gradient(rgb(10, 10, 10) 0 0) padding-box,
-		linear-gradient(-45deg, yellow 0%, orange 50%, yellow 100%) border-box;
+		linear-gradient(-45deg, yellow 0%, rgb(255, 102, 0) 50%, yellow 100%) border-box;
 	transition: background 100ms ease-out, border 100ms ease-out;
 }
 
 div#recommend.game:hover {
 	background:
 		linear-gradient(rgb(20, 20, 20) 0 0) padding-box,
-		linear-gradient(-45deg, yellow 0%, orange 50%, yellow 100%) border-box;
+		linear-gradient(-45deg, yellow 0%, rgb(255, 102, 0) 50%, yellow 100%) border-box;
 	transition: background 100ms ease-out, border 100ms ease-out;
 }
 
