--- a/docs/website.css
+++ b/docs/website.css
@@ -23,9 +23,10 @@ div {
 }
 
 .game-tags-dropdown {
+	margin: 2px;
 	font-size: 16px;
 	width: 150px;
-	border: none;
+	border: 2px transparent;
 	border-radius: 5px;
 	padding: 10px;
 	background: rgb(10, 10, 10);
@@ -41,6 +42,11 @@ div {
 }
 
 .game-tag-page {
+	background-color: rgb(3, 3, 3);
+	padding: 10px;
+	border-radius: 16px;
+	margin: 2px;
+	margin-top: 10px;
 	row-gap: 10px;
 	column-gap: 10px;
 	display: grid;
