--- a/docs/website.css
+++ b/docs/website.css
@@ -22,6 +22,10 @@ div {
 	font-family: Gotham SSm A;
 }
 
+.gif {
+	-webkit-transform: rotateX(0);
+}
+
 .game-tags-dropdown {
 	margin: 2px;
 	font-size: 16px;
